improved macth detection

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,42 @@
 # Example environment overrides for spotify-m3u-sync
-# Copy to .env (which is gitignored) and adjust values.
+# Copy to .env (gitignored) and adjust values.
+# Comment marker is '#'. JSON arrays/objects are supported for list or map overrides.
 
-# Spotify OAuth client credentials
+# --- Spotify OAuth ---
 SPX__SPOTIFY__CLIENT_ID=your_spotify_client_id
-# Optional: override redirect port (defaults to 9876)
+# HTTPS redirect settings (defaults shown). Register the exact redirect in Spotify dashboard.
+# SPX__SPOTIFY__REDIRECT_SCHEME=https
 # SPX__SPOTIFY__REDIRECT_PORT=9876
+# SPX__SPOTIFY__REDIRECT_PATH=/callback
+# Self-signed certificate files (generated manually or via helper); only needed if using https.
+# SPX__SPOTIFY__CERT_FILE=cert.pem
+# SPX__SPOTIFY__KEY_FILE=key.pem
 
-# Library configuration (paths can be relative or absolute)
-SPX__LIBRARY__PATHS=music;more_music
-SPX__LIBRARY__EXTENSIONS=.mp3;.flac;.m4a;.ogg
+# --- Library Configuration ---
+# JSON array for paths (explicit & unambiguous)
+SPX__LIBRARY__PATHS=["music","more_music"]
+# Extensions list override (JSON array). If omitted defaults apply.
+# SPX__LIBRARY__EXTENSIONS=[".mp3",".flac",".m4a",".ogg"]
+# Follow symlinks (boolean coercion works on true/false/1/0/yes/no)
+# SPX__LIBRARY__FOLLOW_SYMLINKS=false
 
-# Matching configuration
+# --- Matching ---
 SPX__MATCHING__FUZZY_THRESHOLD=0.80
+# SPX__MATCHING__EXACT_BONUS=0.05
+# SPX__MATCHING__ALBUM_MATCH_BONUS=0.04
 
-# Export configuration
-SPX__EXPORT__MODE=mirrored
-SPX__EXPORT__DIRECTORY=export/playlists
-SPX__EXPORT__PLACEHOLDER_EXTENSION=.missing
+# --- Export ---
+SPX__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
+# SPX__EXPORT__DIRECTORY=export/playlists
+# SPX__EXPORT__PLACEHOLDER_EXTENSION=.missing
 
-# Reports directory
-SPX__REPORTS__DIRECTORY=export/reports
+# --- Reports ---
+# SPX__REPORTS__DIRECTORY=export/reports
 
-# Database path
-SPX__DATABASE__PATH=data/spotify_sync.db
+# --- Database ---
+# SPX__DATABASE__PATH=data/spotify_sync.db
 
-# Notes:
-# 1. Multiple path-like values can be semicolon separated; your tooling may parse and split them before passing to config overrides.
-# 2. Boolean coercion examples: SPX__LIBRARY__FOLLOW_SYMLINKS=true
-# 3. To force placeholders mode: SPX__EXPORT__MODE=placeholders
+# Additional examples:
+# Boolean: SPX__LIBRARY__FOLLOW_SYMLINKS=true
+# JSON object (unused currently, but parsed): SPX__SPOTIFY__EXTRA={"foo":123}
+# Force placeholders mode: SPX__EXPORT__MODE=placeholders
