make production ready

--- a/.env.example
+++ b/.env.example
@@ -24,11 +24,18 @@ SPX__LIBRARY__PATHS=["music","more_music"]
 SPX__MATCHING__FUZZY_THRESHOLD=0.80
 # SPX__MATCHING__EXACT_BONUS=0.05
 # SPX__MATCHING__ALBUM_MATCH_BONUS=0.04
+# SPX__MATCHING__USE_YEAR=false
+# SPX__MATCHING__DURATION_TOLERANCE=2.0
+# Number of unmatched tracks/albums to show in diagnostics
+# SPX__MATCHING__SHOW_UNMATCHED_TRACKS=20
+# SPX__MATCHING__SHOW_UNMATCHED_ALBUMS=20
 
 # --- Export ---
 SPX__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
 # SPX__EXPORT__DIRECTORY=export/playlists
 # SPX__EXPORT__PLACEHOLDER_EXTENSION=.missing
+# Organize playlists into folders by owner (your playlists vs others)
+# SPX__EXPORT__ORGANIZE_BY_OWNER=false
 
 # --- Reports ---
 # SPX__REPORTS__DIRECTORY=export/reports
