--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@
 
 # --- Spotify OAuth ---
 SPX__SPOTIFY__CLIENT_ID=your_spotify_client_id
+
+# --- Logging Configuration ---
+# Controls verbosity of log output throughout the application
+# Valid values: DEBUG (detailed diagnostics), INFO (normal progress), WARNING (quiet, errors only)
+# Default: INFO
+# SPX__LOG_LEVEL=INFO
+
 # HTTPS redirect settings (defaults shown). Register the exact redirect in Spotify dashboard.
 # SPX__SPOTIFY__REDIRECT_SCHEME=https
 # SPX__SPOTIFY__REDIRECT_PORT=9876
