--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ rapidfuzz>=3.6.1
 tenacity>=8.2.3
 rich>=13.7.0
 cryptography>=42.0.0
+pytest>=8.0.0  # needed for running test suite via run.bat test
