renamend to PSM

--- a/.env.example
+++ b/.env.example
@@ -3,54 +3,54 @@
 # Comment marker is '#'. JSON arrays/objects are supported for list or map overrides.
 
 # --- Spotify OAuth ---
-SPX__SPOTIFY__CLIENT_ID=your_spotify_client_id
+PSM__SPOTIFY__CLIENT_ID=your_spotify_client_id
 
 # --- Logging Configuration ---
 # Controls verbosity of log output throughout the application
 # Valid values: DEBUG (detailed diagnostics), INFO (normal progress), WARNING (quiet, errors only)
 # Default: INFO
-# SPX__LOG_LEVEL=INFO
+# PSM__LOG_LEVEL=INFO
 
 # HTTPS redirect settings (defaults shown). Register the exact redirect in Spotify dashboard.
-# SPX__SPOTIFY__REDIRECT_SCHEME=https
-# SPX__SPOTIFY__REDIRECT_PORT=9876
-# SPX__SPOTIFY__REDIRECT_PATH=/callback
+# PSM__SPOTIFY__REDIRECT_SCHEME=https
+# PSM__SPOTIFY__REDIRECT_PORT=9876
+# PSM__SPOTIFY__REDIRECT_PATH=/callback
 # Self-signed certificate files (generated manually or via helper); only needed if using https.
-# SPX__SPOTIFY__CERT_FILE=cert.pem
-# SPX__SPOTIFY__KEY_FILE=key.pem
+# PSM__SPOTIFY__CERT_FILE=cert.pem
+# PSM__SPOTIFY__KEY_FILE=key.pem
 
 # --- Library Configuration ---
 # JSON array for paths (explicit & unambiguous)
-SPX__LIBRARY__PATHS=["music","more_music"]
+PSM__LIBRARY__PATHS=["music","more_music"]
 # Extensions list override (JSON array). If omitted defaults apply.
-# SPX__LIBRARY__EXTENSIONS=[".mp3",".flac",".m4a",".ogg"]
+# PSM__LIBRARY__EXTENSIONS=[".mp3",".flac",".m4a",".ogg"]
 # Follow symlinks (boolean coercion works on true/false/1/0/yes/no)
-# SPX__LIBRARY__FOLLOW_SYMLINKS=false
+# PSM__LIBRARY__FOLLOW_SYMLINKS=false
 
 # --- Matching ---
-SPX__MATCHING__FUZZY_THRESHOLD=0.80
-# SPX__MATCHING__EXACT_BONUS=0.05
-# SPX__MATCHING__ALBUM_MATCH_BONUS=0.04
-# SPX__MATCHING__USE_YEAR=false
-# SPX__MATCHING__DURATION_TOLERANCE=2.0
+PSM__MATCHING__FUZZY_THRESHOLD=0.80
+# PSM__MATCHING__EXACT_BONUS=0.05
+# PSM__MATCHING__ALBUM_MATCH_BONUS=0.04
+# PSM__MATCHING__USE_YEAR=false
+# PSM__MATCHING__DURATION_TOLERANCE=2.0
 # Number of unmatched tracks/albums to show in diagnostics
-# SPX__MATCHING__SHOW_UNMATCHED_TRACKS=20
-# SPX__MATCHING__SHOW_UNMATCHED_ALBUMS=20
+# PSM__MATCHING__SHOW_UNMATCHED_TRACKS=20
+# PSM__MATCHING__SHOW_UNMATCHED_ALBUMS=20
 
 # --- Export ---
-SPX__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
-# SPX__EXPORT__DIRECTORY=export/playlists
-# SPX__EXPORT__PLACEHOLDER_EXTENSION=.missing
+PSM__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
+# PSM__EXPORT__DIRECTORY=export/playlists
+# PSM__EXPORT__PLACEHOLDER_EXTENSION=.missing
 # Organize playlists into folders by owner (your playlists vs others)
-# SPX__EXPORT__ORGANIZE_BY_OWNER=false
+# PSM__EXPORT__ORGANIZE_BY_OWNER=false
 
 # --- Reports ---
-# SPX__REPORTS__DIRECTORY=export/reports
+# PSM__REPORTS__DIRECTORY=export/reports
 
 # --- Database ---
-# SPX__DATABASE__PATH=data/spotify_sync.db
+# PSM__DATABASE__PATH=data/spotify_sync.db
 
 # Additional examples:
-# Boolean: SPX__LIBRARY__FOLLOW_SYMLINKS=true
-# JSON object (unused currently, but parsed): SPX__SPOTIFY__EXTRA={"foo":123}
-# Force placeholders mode: SPX__EXPORT__MODE=placeholders
+# Boolean: PSM__LIBRARY__FOLLOW_SYMLINKS=true
+# JSON object (unused currently, but parsed): PSM__SPOTIFY__EXTRA={"foo":123}
+# Force placeholders mode: PSM__EXPORT__MODE=placeholders
