introuced new ranking system - fixed database lock test

--- a/.env.example
+++ b/.env.example
@@ -28,14 +28,18 @@ PSM__LIBRARY__PATHS=["music","more_music"]
 # PSM__LIBRARY__FOLLOW_SYMLINKS=false
 
 # --- Matching ---
+# Fuzzy matching threshold (0.0-1.0 scale). Higher = stricter matching.
+# Default: 0.78 (balance between precision and recall)
 PSM__MATCHING__FUZZY_THRESHOLD=0.80
-# PSM__MATCHING__EXACT_BONUS=0.05
-# PSM__MATCHING__ALBUM_MATCH_BONUS=0.04
+# Use year metadata in matching decision (boolean)
 # PSM__MATCHING__USE_YEAR=false
+# Duration tolerance window in seconds for candidate filtering
 # PSM__MATCHING__DURATION_TOLERANCE=2.0
 # Number of unmatched tracks/albums to show in diagnostics
 # PSM__MATCHING__SHOW_UNMATCHED_TRACKS=20
 # PSM__MATCHING__SHOW_UNMATCHED_ALBUMS=20
+# Performance cap: maximum candidates to score per track
+# PSM__MATCHING__MAX_CANDIDATES_PER_TRACK=500
 
 # --- Export ---
 PSM__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
