refactoring phase #3 and #4

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,8 @@
 [pytest]
 pythonpath = .
 addopts = -q
+markers =
+	unit: Unit tests with mocked dependencies
+	integration: Integration tests with real sqlite database
+	e2e: End-to-end workflow tests (CLI)
+	slow: Longer-running or high data volume tests
