provider abstraction ceompleted

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Copy to .env (gitignored) and adjust values.
 # Comment marker is '#'. JSON arrays/objects are supported for list or map overrides.
 
-# --- Spotify OAuth ---
-PSM__SPOTIFY__CLIENT_ID=your_spotify_client_id
+# --- Provider Configuration (Spotify) ---
+PSM__PROVIDERS__SPOTIFY__CLIENT_ID=your_spotify_client_id
 
 # --- Logging Configuration ---
 # Controls verbosity of log output throughout the application
@@ -12,12 +12,12 @@ PSM__SPOTIFY__CLIENT_ID=your_spotify_client_id
 # PSM__LOG_LEVEL=INFO
 
 # HTTPS redirect settings (defaults shown). Register the exact redirect in Spotify dashboard.
-# PSM__SPOTIFY__REDIRECT_SCHEME=https
-# PSM__SPOTIFY__REDIRECT_PORT=9876
-# PSM__SPOTIFY__REDIRECT_PATH=/callback
+# PSM__PROVIDERS__SPOTIFY__REDIRECT_SCHEME=https
+# PSM__PROVIDERS__SPOTIFY__REDIRECT_PORT=9876
+# PSM__PROVIDERS__SPOTIFY__REDIRECT_PATH=/callback
 # Self-signed certificate files (generated manually or via helper); only needed if using https.
-# PSM__SPOTIFY__CERT_FILE=cert.pem
-# PSM__SPOTIFY__KEY_FILE=key.pem
+# PSM__PROVIDERS__SPOTIFY__CERT_FILE=cert.pem
+# PSM__PROVIDERS__SPOTIFY__KEY_FILE=key.pem
 
 # --- Library Configuration ---
 # JSON array for paths (explicit & unambiguous)
@@ -56,5 +56,5 @@ PSM__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
 
 # Additional examples:
 # Boolean: PSM__LIBRARY__FOLLOW_SYMLINKS=true
-# JSON object (unused currently, but parsed): PSM__SPOTIFY__EXTRA={"foo":123}
+# JSON object (unused currently, but parsed): PSM__PROVIDERS__SPOTIFY__EXTRA={"foo":123}
 # Force placeholders mode: PSM__EXPORT__MODE=placeholders
