single provider conf hint

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 # Comment marker is '#'. JSON arrays/objects are supported for list or map overrides.
 
 # --- Provider Configuration (Spotify) ---
+# IMPORTANT: Only configure ONE provider at a time.
+# Multi-provider mode is not yet implemented. Configuring multiple providers
+# will result in an error message.
 PSM__PROVIDERS__SPOTIFY__CLIENT_ID=your_spotify_client_id
 
 # --- Logging Configuration ---
