improved db handling / locking

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ PSM__PROVIDERS__SPOTIFY__CLIENT_ID=your_spotify_client_id
 # --- Library Configuration ---
 # JSON array for paths (explicit & unambiguous)
 PSM__LIBRARY__PATHS=["music","more_music"]
+# Use this format for Windows paths with backslashes:
+# PSM__LIBRARY__PATHS=["Z:\\Artists","Z:\\Sampler","Z:\\Soundtracks"]
+
 # Extensions list override (JSON array). If omitted defaults apply.
 # PSM__LIBRARY__EXTENSIONS=[".mp3",".flac",".m4a",".ogg"]
 # Follow symlinks (boolean coercion works on true/false/1/0/yes/no)
