improved export options

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,13 @@ PSM__PROVIDERS__SPOTIFY__CLIENT_ID=your_spotify_client_id
 
 # HTTPS redirect settings (defaults shown). Register the exact redirect in Spotify dashboard.
 # PSM__PROVIDERS__SPOTIFY__REDIRECT_SCHEME=https
+# PSM__PROVIDERS__SPOTIFY__REDIRECT_HOST=127.0.0.1
 # PSM__PROVIDERS__SPOTIFY__REDIRECT_PORT=9876
 # PSM__PROVIDERS__SPOTIFY__REDIRECT_PATH=/callback
+# OAuth scope (default covers reading library and playlists)
+# PSM__PROVIDERS__SPOTIFY__SCOPE=user-library-read playlist-read-private playlist-read-collaborative
+# Token cache file location
+# PSM__PROVIDERS__SPOTIFY__CACHE_FILE=tokens.json
 # Self-signed certificate files (generated manually or via helper); only needed if using https.
 # PSM__PROVIDERS__SPOTIFY__CERT_FILE=cert.pem
 # PSM__PROVIDERS__SPOTIFY__KEY_FILE=key.pem
@@ -32,6 +37,16 @@ PSM__LIBRARY__PATHS=["music","more_music"]
 # PSM__LIBRARY__EXTENSIONS=[".mp3",".flac",".m4a",".ogg"]
 # Follow symlinks (boolean coercion works on true/false/1/0/yes/no)
 # PSM__LIBRARY__FOLLOW_SYMLINKS=false
+# Ignore patterns (glob patterns for files/directories to skip)
+# PSM__LIBRARY__IGNORE_PATTERNS=[".*"]
+# Skip unchanged files during library scan (performance optimization)
+# PSM__LIBRARY__SKIP_UNCHANGED=true
+# Fast scan mode (uses file metadata caching)
+# PSM__LIBRARY__FAST_SCAN=true
+# Database commit interval (number of files processed before commit)
+# PSM__LIBRARY__COMMIT_INTERVAL=100
+# Minimum bitrate in kbps for audio files (quality filter)
+# PSM__LIBRARY__MIN_BITRATE_KBPS=320
 
 # --- Matching ---
 # Fuzzy matching threshold (0.0-1.0 scale). Higher = stricter matching.
@@ -53,12 +68,26 @@ PSM__EXPORT__MODE=mirrored            # strict | mirrored | placeholders
 # PSM__EXPORT__PLACEHOLDER_EXTENSION=.missing
 # Organize playlists into folders by owner (your playlists vs others)
 # PSM__EXPORT__ORGANIZE_BY_OWNER=false
+# Include "Liked Songs" as a virtual playlist in exports
+# PSM__EXPORT__INCLUDE_LIKED_SONGS=true
+# Path format in M3U files: "absolute" or "relative"
+# PSM__EXPORT__PATH_FORMAT=absolute
+# Use library roots from config to reconstruct paths (preserves Z:\ vs \\server\share format)
+# PSM__EXPORT__USE_LIBRARY_ROOTS=true
+# Delete all .m3u files before export (safest but removes any manual additions)
+# PSM__EXPORT__CLEAN_BEFORE_EXPORT=false
+# Automatically overwrite existing files without prompting (future feature)
+# PSM__EXPORT__AUTO_OVERWRITE=true
+# Detect and prompt about playlists that exist on disk but not in database
+# PSM__EXPORT__DETECT_OBSOLETE=true
 
 # --- Reports ---
 # PSM__REPORTS__DIRECTORY=data/export/reports
 
 # --- Database ---
 # PSM__DATABASE__PATH=data/db/spotify_sync.db
+# SQLite journal mode (WAL = Write-Ahead Logging for better concurrency)
+# PSM__DATABASE__PRAGMA_JOURNAL_MODE=WAL
 
 # Additional examples:
 # Boolean: PSM__LIBRARY__FOLLOW_SYMLINKS=true
