--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ watchdog>=4.0.0  # filesystem watching for --watch mode
 pytest>=8.0.0  # needed for running test suite via run.bat test
 pyinstaller==6.3.0  # pinned for reproducible release builds
 PySide6>=6.6.0  # Qt GUI framework
-lizard>=1.24.0  # code complexity analysis for --complexity option
+lizard>=1.18.0  # code complexity analysis
+flake8>=7.0.0  # style and syntax checking
