--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-${{ matrix.python }}-
             ${{ runner.os }}-pip-
+      - name: Install system OpenGL/EGL libs (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libegl1 libgl1
+          echo "QT_QPA_PLATFORM=offscreen" >> $GITHUB_ENV
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
