--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,17 +138,54 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          mkdir -p release-assets
+          mkdir -p release-assets bundle/windows bundle/linux bundle/macos
+
+          # 1) Keep existing individual binaries (flattened) for backward compatibility
           shopt -s nullglob
           for dir in artifacts/*; do
             if [ -d "$dir" ]; then
               base="$(basename "$dir")"
               for f in "$dir"/*; do
-                # Copy each artifact file to a flattened folder using the artifact name as the file name
                 cp "$f" "release-assets/$base"
               done
             fi
           done
+
+          # 2) Create bundled archives containing both CLI and GUI per-OS
+          # Windows zip bundle (psm-windows-amd64.zip)
+          if [ -d "artifacts/psm-cli-windows-amd64.exe" ] && [ -d "artifacts/psm-gui-windows-amd64.exe" ]; then
+            echo "Creating Windows bundle..."
+            rm -rf bundle/windows/*
+            cp artifacts/psm-cli-windows-amd64.exe/* bundle/windows/psm-cli.exe
+            cp artifacts/psm-gui-windows-amd64.exe/* bundle/windows/psm-gui.exe
+            (cd bundle/windows && zip -9 ../psm-windows-amd64.zip psm-cli.exe psm-gui.exe)
+            sha256sum bundle/psm-windows-amd64.zip > bundle/psm-windows-amd64.zip.sha256
+            mv bundle/psm-windows-amd64.zip* release-assets/
+          fi
+
+          # Linux tar.gz bundle (psm-linux-amd64.tar.gz)
+          if [ -d "artifacts/psm-cli-linux-amd64" ] && [ -d "artifacts/psm-gui-linux-amd64" ]; then
+            echo "Creating Linux bundle..."
+            rm -rf bundle/linux/*
+            cp artifacts/psm-cli-linux-amd64/* bundle/linux/psm-cli
+            cp artifacts/psm-gui-linux-amd64/* bundle/linux/psm-gui
+            chmod +x bundle/linux/psm-cli bundle/linux/psm-gui || true
+            tar -C bundle/linux -czf bundle/psm-linux-amd64.tar.gz psm-cli psm-gui
+            sha256sum bundle/psm-linux-amd64.tar.gz > bundle/psm-linux-amd64.tar.gz.sha256
+            mv bundle/psm-linux-amd64.tar.gz* release-assets/
+          fi
+
+          # macOS tar.gz bundle (psm-macos-amd64.tar.gz)
+          if [ -d "artifacts/psm-cli-macos-amd64" ] && [ -d "artifacts/psm-gui-macos-amd64" ]; then
+            echo "Creating macOS bundle..."
+            rm -rf bundle/macos/*
+            cp artifacts/psm-cli-macos-amd64/* bundle/macos/psm-cli
+            cp artifacts/psm-gui-macos-amd64/* bundle/macos/psm-gui
+            chmod +x bundle/macos/psm-cli bundle/macos/psm-gui || true
+            tar -C bundle/macos -czf bundle/psm-macos-amd64.tar.gz psm-cli psm-gui
+            sha256sum bundle/psm-macos-amd64.tar.gz > bundle/psm-macos-amd64.tar.gz.sha256
+            mv bundle/psm-macos-amd64.tar.gz* release-assets/
+          fi
 
       - name: Remove existing assets (cleanup)
         shell: bash
