Remove individual binary uploads, keep only bundle archives

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,18 +140,7 @@ jobs:
           set -euo pipefail
           mkdir -p release-assets bundle/windows bundle/linux bundle/macos
 
-          # 1) Keep existing individual binaries (flattened) for backward compatibility
-          shopt -s nullglob
-          for dir in artifacts/*; do
-            if [ -d "$dir" ]; then
-              base="$(basename "$dir")"
-              for f in "$dir"/*; do
-                cp "$f" "release-assets/$base"
-              done
-            fi
-          done
-
-          # 2) Create bundled archives containing both CLI and GUI per-OS
+          # Create bundled archives containing both CLI and GUI per-OS
           # Windows zip bundle (playlist-sync-matcher-${tag}-Win64.zip)
           tag="${GITHUB_REF_NAME}"
           cli_win="playlist-sync-matcher-cli-${tag}-Win64.exe"
