--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ PySide6>=6.6.0  # Qt GUI framework
 lizard>=1.18.0  # code complexity analysis
 flake8>=7.0.0  # style and syntax checking
 autoflake>=2.0.0  # automated unused import removal
+black>=24.0.0  # code formatting (PEP 8 compatible)
+black>=24.0.0  # code formatting (PEP 8 compatible)
