--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -25,15 +25,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-black-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-black-
-            ${{ runner.os }}-pip-
+          cache: 'pip'
 
       - name: Install Black
         run: |
