--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pyinstaller==6.3.0
 
       - name: Build CLI executable with PyInstaller
         run: pyinstaller psm-cli.spec
@@ -84,6 +85,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pyinstaller==6.3.0
 
       - name: Build GUI executable with PyInstaller
         run: pyinstaller psm-gui.spec
