ci: Add CI quality gate to release workflow
- Release workflow now calls CI workflow as a prerequisite
- Build jobs (CLI and GUI) wait for CI to pass before starting
- CI workflow marked as reusable (workflow_call)
- Prevents releasing broken code
- Added comprehensive documentation in docs/ci-quality-gates.md

This ensures all tests, formatting, and quality checks pass before
building and publishing release executables.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,15 @@ permissions:
   contents: write
 
 jobs:
+  # Run CI checks before building release
+  ci-check:
+    name: CI Quality Gate
+    uses: ./.github/workflows/ci.yml
+    
   build-cli:
     name: Build CLI - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: ci-check  # Wait for CI to pass before building
     strategy:
       matrix:
         include:
@@ -58,6 +64,7 @@ jobs:
   build-gui:
     name: Build GUI - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: ci-check  # Wait for CI to pass before building
     strategy:
       matrix:
         include:
